# sf-clean-room

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 00-design-principles.md  02-design-v2.md  03-design-2.1.md  03-plan-2.1.md  04-design-v3.md  04-plan-v3.md  05-design-v4.md  05-plan-v4.md  agent-prompts.md  comparison.md  design.md  docs-change-log.md  regression-testing.md
docs/design/: 02-design-v2.md  03-design-2.1.md  04-design-v3.md  05-design-v4.md
docs/ideation/: 00-design-principles.md  01-metadata-ideation.md  02-data-download.md  03-limited-permissions-metadata.md  04-event-log-download.md  04-event-log-fields.md  05-technical-objects.md  salesforce-code-analyser.md  salesforce-event-log-reference.md  salesforce-technical-objects.md
docs/plan/: 03-plan-2.1.md  04-plan-v3.md  05-plan-v4.md
docs/reference/: salesforce-metadata-api-reference.md  salesforce-records-schema.md  salesforce-security-health-check.md
docs/requirements/: 01-metadata-ideation.md  02-data-download.md  03-limited-permissions-metadata.md  04-event-log-download.md  04-event-log-fields.md  05-technical-objects.md
docs/use-cases/: salesforce-org-assessment.md
examples/sample-output/: README.md
examples/sample-output/code_analysis/: _summary.json  code_analyser_results_acme_dev.csv  code_analyser_results_acme_dev.html  code_analyser_results_acme_dev.json
examples/sample-output/event_logs/acme_dev/2026-07-01_to_2026-07-09/: Login.csv  _field-handling-applied.csv
examples/sample-output/metadata/: package.xml
examples/sample-output/metadata/objects/: Sample_Account__c.object-meta.xml
examples/sample-output/records/: Account.tsv  _field-handling-applied.csv
examples/sample-output/security_health_check/: securityhealthcheck_acme_dev.json
examples/sample-output/technical_objects/: LoginHistory.tsv  _field-handling-applied.csv
src/sf_clean_room/: __main__.py  audit.py  batch.py  classify.py  cli.py  code_analysis_pipeline.py  config.py  constants.py  enumerate_md.py  eventlog_classify.py  eventlog_download.py  eventlog_pipeline.py  eventlog_plan.py  extract.py  filter_md.py  hashing.py  manifest.py  paths.py  pipeline.py  plan.py  probe.py  publish.py  records_extract.py  records_pipeline.py  retrieve.py  schema_scan.py  scrub.py  security_pipeline.py  session.py  sfcli.py  skip_log.py  soap.py  technical_catalog.py  technical_classify.py  technical_download.py  technical_pipeline.py  technical_plan.py
tests/: conftest.py  live_org.toml  test_audit.py  test_batch.py  test_classify.py  test_cli.py  test_cli_records.py  test_code_analysis_pipeline.py  test_config.py  test_constants.py  test_enumerate.py  test_eventlog_classify.py  test_eventlog_download.py  test_eventlog_pipeline.py  test_eventlog_plan.py  test_extract.py  test_filter.py  test_hashing.py  test_live_eventlogs.py  test_live_metadata.py  test_live_records.py  test_live_technical.py  test_manifest.py  test_paths.py  test_pipeline_v21.py  test_plan.py  test_publish.py  test_records_extract.py  test_records_pipeline.py  test_security_pipeline.py  test_sfcli.py  test_skip_log.py  test_technical_catalog.py  test_technical_classify.py  test_technical_download.py  test_technical_pipeline.py
