[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-clean-room"
version = "0.1.0"
description = "AI-operated, read-only Salesforce org assessment CLI that exports anonymised metadata, records, event logs, technical objects, security health check, and code analysis to local folders with PII excluded, hashed, or derived before downstream tools see it."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "sf-clean-room maintainers" }]
keywords = [
    "salesforce",
    "salesforce-cli",
    "salesforce-ai",
    "salesforce-security",
    "org-assessment",
    "metadata",
    "privacy",
    "data-anonymization",
    "anonymization",
    "data-masking",
    "event-log",
    "event-monitoring",
    "security",
    "code-analysis",
    "pii",
    "cli",
    "ai-tools",
    "agent-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28",
]

[project.urls]
"Homepage" = "https://github.com/gwickman/sf-clean-room"
"Bug Tracker" = "https://github.com/gwickman/sf-clean-room/issues"
"Source" = "https://github.com/gwickman/sf-clean-room"
"Documentation" = "https://github.com/gwickman/sf-clean-room#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sf-clean-room = "sf_clean_room.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits a real Salesforce org (the alias in tests/live_org.toml); skipped automatically when that org is not authenticated.",
]
